# ai-server

./: .pre-commit-config.yaml  README.md  pyproject.toml
ai_server/: __init__.py  __main__.py  redis_helper.py  server.py
test/: test_cli_mode.py  test_core.py  test_integration.py  test_integration_llama_server_mode.py  test_server_mode.py  test_system_prompt.py  test_system_prompt_api.py
